# dart-vodozemac

./: .gitignore  README.md  flutter_rust_bridge.yaml
.github/workflows/: integrate.yml  publish.yml  versions.env
dart/: .gitignore  CHANGELOG.md  README.md  index.html  pubspec.yaml
dart/android/: local.properties
dart/coverage/test/: olm_compatibility_test.dart.vm.json  vodozemac_test.dart.vm.json
dart/example/: dart_example.dart  run_tests_web.dart
dart/lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  ffi.io.dart  ffi.web.dart  generic.dart  lib.dart  vodozemac.dart  vodozemac_bindings_dart.dart
dart/lib/src/: api.dart  utils.dart
dart/test/: dart_test.dart  generic_test.dart  olm_compatibility_test.dart  vodozemac_test.dart  vodozemac_test_web.dart
dart/test/web_test_helper/: main.dart  pubspec.yaml
dart/web/: index.html
flutter/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
flutter/ios/: README_NOTIFICATION_DECRYPT.md
flutter/lib/: flutter_vodozemac.dart
flutter/linux/: CMakeLists.txt
flutter/macos/: flutter_vodozemac.podspec
flutter/windows/: CMakeLists.txt
flutter_vodozemac/: pubspec.yaml
flutter_vodozemac/android/: build.gradle  settings.gradle
flutter_vodozemac/ios/: flutter_vodozemac.podspec
flutter_vodozemac/linux/: CMakeLists.txt
flutter_vodozemac/windows/: CMakeLists.txt
rust/: Cargo.toml  build.rs
rust/src/: api.rs  bindings.rs  frb_generated.rs  ios_ffi_bindings.rs  lib.rs
scripts/: extract_changelog.sh  run_io_tests.sh  run_web_tests.sh
(+5 files in other folders)
