[package]
name = "vodozemac-bindings-dart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1.0.69"
flutter_rust_bridge = "1.76.0"
vodozemac = { version = "0.3.0", features = ["libolm-compat", "js"] }

[build-dependencies]
flutter_rust_bridge_codegen = "1.76.0"
