[package]
name = "vodozemac_bindings_dart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1.0.69"
flutter_rust_bridge = "=2.9.0"
vodozemac = { version = "0.9.0", features = ["libolm-compat", "js", "insecure-pk-encryption"] }

[build-dependencies]
flutter_rust_bridge_codegen = "2.9.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
